Fix prevent usage overlay bleeding out of sidebar

--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -1343,13 +1343,15 @@ span.draggable-post-element.element-dragging {
   width: 230px; }
 
 #sidebar-ui.element-settings-activated {
-  position: static; }
-
-#sidebar-ui.element-settings-activated ul.sidebar-commands.sidebar-commands-header {
   z-index: 10001004;
-  position: fixed;
-  top: 0;
-  width: 261px; }
+  height: 46px; }
+
+#sidebar-ui.element-settings-activated .sidebar-commands,
+#sidebar-ui.element-settings-activated .sidebar-panels {
+  display: none; }
+
+#sidebar-ui.element-settings-activated .sidebar-commands-header {
+  display: block; }
 
 /* Height Media Queries Fixes
 	 ========================== */
@@ -11883,7 +11885,7 @@ a.ueditor-action-trash:before {
   right: 0;
   background: rgba(38, 58, 77, 0.8);
   display: none;
-  z-index: 10; }
+  z-index: 1000; }
 
 #preventUsageOverlay span, #preventElementsUsageOverlay span {
   padding: 2px 5px;
